--- a/Research.bib
+++ b/Research.bib
@@ -103,3 +103,12 @@
   title={Teens, Video Games and Civics},
   author={Lenhart, A and Kahne, J and Middaugh, E and Macgill, A and Evans, C and Vitak, J.},
 }
+
+@article{stoltenberg1969quasi,
+  title={On quasi-metric spaces},
+  author={Stoltenberg, Ronald A and others},
+  journal={Duke Math. J},
+  volume={36},
+  pages={65--71},
+  year={1969}
+}
