--- a/Research.bib
+++ b/Research.bib
@@ -112,3 +112,34 @@
   pages={65--71},
   year={1969}
 }
+
+@article{Tange2011a,
+  added-at = {2016-01-18T15:13:04.000+0100},
+  address = {Frederiksberg, Denmark},
+  author = {Tange, O.},
+  biburl = {https://www.bibsonomy.org/bibtex/2ab8ea12a0dffc7a4f4d5e972c8fb4ad8/fezett},
+  doi = {10.5281/zenodo.16303},
+  interhash = {b829bb54862d2644509ad3d5fa2a2e09},
+  intrahash = {ab8ea12a0dffc7a4f4d5e972c8fb4ad8},
+  journal = {;login: The USENIX Magazine},
+  keywords = {imported},
+  month = Feb,
+  number = 1,
+  pages = {42-47},
+  timestamp = {2016-01-18T15:15:28.000+0100},
+  title = {GNU Parallel - The Command-Line Power Tool},
+  url = {http://www.gnu.org/s/parallel},
+  volume = 36,
+  year = 2011
+}
+
+@article{fei2007learning,
+  title={Learning generative visual models from few training examples: An incremental bayesian approach tested on 101 object categories},
+  author={Fei-Fei, Li and Fergus, Rob and Perona, Pietro},
+  journal={Computer vision and Image understanding},
+  volume={106},
+  number={1},
+  pages={59--70},
+  year={2007},
+  publisher={Elsevier}
+}
